--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,17 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+
 </head>
 <body>
+  <!-- Bootstrap JS (with Popper) -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zyS3fex5wWJrFIpd6uI3Q3lFqP9L85s7On5GF7hT" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zyS3fex5wWJrFIpd6uI3Q3lFqP9L85s7On5GF7hT" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-pzjw8f+ua7Kw1TIq0YhP33rZb0o6gYFz7Y0z7z3QmjMbRdxz8FzjZ1F2+V0vfuJ" crossorigin="anonymous"></script>
+
   <app-root></app-root>
 </body>
 </html>
